test/fixtures/type-error/patternMatching.lys
fun matcher(x: i32): i32 =
  match x {
    case 1.5 -> 1
    else -> 2
  }
